Name:           thundermint
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint-crypto
                     , thundermint-types
                     , aeson
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , directory
                     , exceptions        >=0.8.3
                     , filepath
                     , mmorph
                     , microlens         >=0.4
                     , microlens-mtl     >=0.1
                     , network-info
                     , pipes             >=4
                     , prometheus-client
                     , random
                     , random-shuffle
                     , retry             >=0.7.6.2
                     , serialise         >=0.2
                     , sqlite-simple
                     , stm               >=2.5
                     , text
                     , transformers      >=0.5
                     , unordered-containers >=0.2.5.0
                     --
                     , katip              >=0.6.3.0
                     , katip-elasticsearch
                     , http-client-tls
                     , bloodhound
                     , network            >=2.6.0.0 && <2.9
                     , tls                >=1.4.1
                     , x509
                     , x509-store
                     , x509-system
                     , x509-validation

  Exposed-modules:
                  Thundermint.Blockchain.Internal.Algorithm
                  Thundermint.Blockchain.Internal.Engine
                  Thundermint.Blockchain.Internal.Engine.Types
                  Thundermint.Blockchain.Internal.Types
                  Thundermint.Blockchain.Interpretation
                  Thundermint.Control
                  Thundermint.Crypto.Containers
                  Thundermint.Debug.Trace
                  Thundermint.Logger
                  Thundermint.Logger.Class
                  Thundermint.Monitoring
                  Thundermint.Run
                  Thundermint.Mock.Coin
                  Thundermint.Mock.KeyList
                  Thundermint.Mock.KeyVal
                  Thundermint.Mock.Types
                  Thundermint.P2P
                  Thundermint.P2P.Consts
                  Thundermint.P2P.Network
                  Thundermint.P2P.PeerState
                  Thundermint.P2P.Types
                  Thundermint.Store
                  Thundermint.Store.SQL
                  Thundermint.Store.STM
                  Thundermint.Store.Internal.BlockDB
                  Thundermint.Store.Internal.Types
                  Thundermint.Store.Internal.Query
                  Thundermint.Utils
                  Thundermint.Utils.Parser
  Other-modules:
                  Thundermint.P2P.Network.Parameters
                  Thundermint.P2P.Network.TLS
                  Thundermint.P2P.Network.IpAddresses
                  Thundermint.P2P.Network.RealNetworkStub

-- Example programs
Executable thundermint-keyval
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , aeson
                     , bytestring >=0.10
                     , optparse-applicative
  hs-source-dirs:      exe
  Main-is:             key-val.hs

Executable thundermint-coin
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , thundermint-types
                     , aeson
                     , bytestring           >=0.10
                     , optparse-applicative >= 0.14
  hs-source-dirs:      exe
  Main-is:             coin.hs

Executable thundermint-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans -rtsopts "-with-rtsopts=-N -T -c -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , thundermint
                     , thundermint-crypto
                     , aeson
                     , bytestring           >=0.10
                     , data-default-class
                     , exceptions
                     , filepath
                     , katip                >=0.5.4.0
                     , network              >=2.6.0.0
                     , network-simple       >=0.4.2
                     , optparse-applicative >=0.14
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , transformers
                     , wai-middleware-prometheus
                     , warp
  hs-source-dirs:      exe
  Main-is:             coin-node.hs

-- Executable thundermint-coin-db
--   Ghc-options:         -Wall -threaded -Wno-orphans
--   Default-Language:    Haskell2010
--   Build-Depends:       base                 >=4.9 && <5
--                      , thundermint
--                      , thundermint-crypto
--                      , aeson
--                      , base58-bytestring    >=0.1
--                      , bytestring           >=0.10
--                      , containers           >=0.5.7
--                      , directory
--                      , filepath
--                      , optparse-applicative >=0.14
--                      , serialise
--                      , stm
--                      , text
--   hs-source-dirs:      exe
--   Main-is:             coin-db.hs


-- Test suite
Test-suite thundermint-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint
                     , thundermint-crypto
                     , thundermint-types
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , containers
                     , exceptions
                     , microlens
                     , network
                     , random
                     , sqlite-simple
                     , katip
                     , serialise         >=0.2
                     , stm               >=2.4
                     , retry             >=0.7.6.2
                     --
                     , QuickCheck
                     , bytestring-arbitrary
                     , generic-arbitrary
                     , hedgehog
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Arbitrary.Instances
                       TM.Mempool
                       TM.MockNet
                       TM.Network
                       TM.NetworkTls
                       TM.P2P
                       TM.Persistence
                       TM.RealNetwork
                       TM.Serialisation
                       TM.Store
                       TM.Time
                       TM.Validators
                       TM.Util.Network
                       TM.Util.Tests

-- Benchmarks
Benchmark thundermint-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , criterion
                     , cryptonite
                     , deepseq
