cabal-version:       2.4
name:                hschain-pow-func
version:             0.1.0.0
synopsis:            SAT-based Proof-of-work for hschain blockchain package set
license:             MIT
license-file:        LICENSE
author:              Serguey Zefirov
maintainer:          sergueyz@gmail.com
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     HSChain.POW
  build-depends:       base >=4.9
                     , bytestring
                     , transformers

  pkgconfig-depends:   openssl
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits/evpow.c cbits/yalsat/yals.c
  include-dirs:        cbits cbits/yalsat


executable hschain-pow-cli
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , optparse-applicative
                     , bytestring
                     , hschain-pow-func
  hs-source-dirs:      exe
  default-language:    Haskell2010

